--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-ipykernel==6.29.5
-ipywidgets==8.1.5
-matplotlib==3.10.0
-numpy==2.0.2
-pandas==2.2.3
-pennylane==0.40.0
-qiskit==1.3.2
-scikit-learn==1.6.1
-scipy==1.15.2
-seaborn==0.13.2
-sympy==1.13.3
+ipykernel==6.29
+ipywidgets==8.1
+matplotlib==3.10
+numpy~=2.0
+pandas~=2.2.3
+pennylane==0.40
+pennylane-qiskit==0.40
+scikit-learn==1.6
+scipy==1.15
+seaborn==0.13
+sympy~=1.12
+tqdm==4.67
